<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">ResidualVM</string>
  <string name="app_desc">3D adventure game interpreter</string>
  <string name="quit">Quit</string>
  <string name="residualvm_perm_plugin_label">ResidualVM plugin</string>
  <string name="residualvm_perm_plugin_desc">Allows the application to
  provide a ResidualVM loadable plugin: code that will be executed in the
  ResidualVM application.  Malicious plugins may do anything ResidualVM
  itself could do: write to your SD card, delete your savegames,
  change the ResidualVM background to puce, replace menu labels with rude
  words, etc.</string>
  <string name="no_sdcard_title">No SD card?</string>
  <string name="no_sdcard">Unable to read your SD card.  This usually
  means you still have it mounted on your PC.  Unmount, reinsert,
  whatever and then try again.</string>
  <string name="no_plugins_title">No plugins found</string>
  <string name="no_plugins_found">ResidualVM requires at least one <i>game
  engine</i> to be useful.  Engines are available as separate plugin
  packages, from wherever you found ResidualVM.</string>
  <string name="to_market">To Market</string>
  
    <string name="menu">Menu</string>
    <string name="inventory">Inventory</string>
    <string name="action">Action</string>
    <string name="up">Up</string>
    <string name="ok">Down</string>
    <string name="down">Down</string>
    <string name="left">Down</string>
    <string name="right">Down</string>
    <string name="exit">Exit</string>
    <string name="hotspot">Hotspot</string>
    <string name="touchmode">Touchmode</string>
    <string name="skip_dlg">Skip dialog</string>
  
</resources>
