<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<org.residualvm.residualvm.EditableSurfaceView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_surface"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:keepScreenOn="true"
	android:focusable="true"
	android:focusableInTouchMode="true"
/>

    <ScrollView
        android:id="@+id/sidebar"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/btnInventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/inventory"
                android:src="@drawable/ic_inventory" />

            <ImageView
                android:id="@+id/btnTouchmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/touchmode"
                android:src="@drawable/ic_touchmode2" />

            <ImageView
                android:id="@+id/btnAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/action"
                android:src="@drawable/ic_use" />

            <ImageView
                android:id="@+id/btnSkipDlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/skip_dlg"
                android:src="@drawable/ic_skip_dialog" />

            <ImageView
                android:id="@+id/btnHotspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hotspot"
                android:src="@drawable/ic_hotspot" />

            <ImageView
                android:id="@+id/btnUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/up"
                android:src="@drawable/ic_up" />

            <ImageView
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ok"
                android:src="@drawable/ic_ok" />

            <ImageView
                android:id="@+id/btnDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/down"
                android:src="@drawable/ic_down" />

            <ImageView
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/left"
                android:src="@drawable/ic_left" />

            <ImageView
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/right"
                android:src="@drawable/ic_right" />

			<ImageView
				android:id="@+id/show_keyboard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginRight="10dp"
				android:src="@drawable/ic_action_keyboard" />

		</LinearLayout>
    </ScrollView>

</RelativeLayout>
